# attractor-lab

./: .gitignore  CONTRACT.md  Changelog.md  Disclaimer.md  License.md  README.md
core/: README.md  pyproject.toml
core/src/lulab/anim/: README.md  defaults.py  plot_helpers.py
core/src/lulab/i18n/: plot_text.py
core/src/lulab/io/: defaults.py  loaders.py  paths.py  project.py  save_figure.py  theme.py
core/src/lulab/tex/: export.py  export_doc_from_ipynb.py  export_md_ipynb_to_tex.py  export_snippets.py  ipynb_to_md.py  preamble_LEGACY.tex
core/src/lulab/utils/: paths.py  topic.py
core/src/lulab/viz/: export.py  plots.py
docs/engineering-log/: 2025-12-20-foundation-log.md  engineering-log.md
formats/: README.md
registry/: README.md
tools/: README.md
tools/bootstrap/: bootstrap_topic_docs_001.sh  verify_topic_docs.sh
topics/: README.md
topics/TOP_0001_exoplanet_birth_radius/: README.md
topics/TOP_0001_exoplanet_birth_radius/i18n/: labels.yaml  titles.yaml
topics/TOP_0001_exoplanet_birth_radius/meta/: outline.md
topics/TOP_0001_exoplanet_birth_radius/notebooks/: AA_001_EN.ipynb  AA_001_RU.ipynb  ACAP_001_EN.ipynb  ACAP_001_RU.ipynb  ACAP_002_EN.ipynb  ACAP_002_RU.ipynb  ACAP_003_EN.ipynb  ACAP_003_RU.ipynb  ACA_001_EN.ipynb  ACA_001_RU.ipynb  ACA_002_EN.ipynb  ACA_002_RU.ipynb  ANIM_001_EN.ipynb  ANIM_002_EN.ipynb  ANIM_003_EN.ipynb  AZ_001_EN.ipynb  AZ_001_RU.ipynb  AZ_002_EN.ipynb  AZ_002_RU.ipynb  AppendixA_EN.ipynb  AppendixA_RU.ipynb  CHR.ipynb  CHR_001_EN.ipynb  CHR_001_RU.ipynb  CHR_EN.ipynb  CHR_RU.ipynb  MIN_001_EN.ipynb  README.MD  (+14 more)
(+73 files in other folders)
